<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GitHubers</string>
    <string name="my_profile">My Profile</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search_hint">Search by username</string>
    <string name="query_empty">Query cannot empty</string>
    <string name="favorite">Favorite</string>
    <string name="empty_result">Empty Result</string>
    <string name="nav_clicked">Navigation Menu Clicked</string>
    <string name="no_following">No Following</string>
    <string name="no_followers">No Followers</string>
    <string name="no_repos">No Repository</string>
    <string name="chat">Chat</string>
    <string name="error">Connection Error!</string>
    <string name="default_message">Hi, don\'t forget to open Githubers</string>
    <string name="info">Info</string>
    <string name="avatar">Avatar</string>
    <string name="logo">Logo</string>
    <string name="stats">%1$d Following - %2$d Followers - %3$d Repositories</string>
    <string name="added">Added to Favorite List</string>
    <string name="removed">Removed from Favorite List</string>
    <string name="setting">Setting</string>
    <string name="alarm_summary_on">Automatically download attachments for incoming emails</string>
    <string name="alarm_summary_off">Only download attachments when manually requested</string>
    <string name="alarm_header">Alarm Manager</string>
    <string name="alarm_message">Alarm Message</string>
    <string name="alarm_on">Turn on alarm</string>
    <string name="language_header">Language</string>
    <string name="change_language">Change Language</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="set">SET</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="appwidget_text">Favorite GitHubers</string>
    <string name="empty_text">Empty List</string>
</resources>