<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:id="@+id/widget_view"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_item_widget"
        android:layout_width="64dp"
        android:layout_height="64dp"
        tools:src="@color/colorLightGrey"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/tv_item_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_item_widget"
        android:layout_toStartOf="@id/btn_item_widget"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        tools:text="@string/app_name" />
    
    <ImageView
        android:id="@+id/btn_item_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_outline_info_24"
        android:contentDescription="@string/info" />

</RelativeLayout>