<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/cToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingVertical="24dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5">
                <ImageView
                    android:id="@+id/ic_message"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_toStartOf="@id/img_avatar"
                    android:layout_alignTop="@id/img_avatar"
                    android:layout_alignBottom="@id/img_avatar"
                    android:layout_margin="24dp"
                    android:contentDescription="@string/chat"
                    android:src="@drawable/ic_outline_forum_24"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    tools:src="@color/colorAccent"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorWhite"/>
                <ImageView
                    android:id="@+id/ic_favorite"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_toEndOf="@id/img_avatar"
                    android:layout_alignTop="@id/img_avatar"
                    android:layout_alignBottom="@id/img_avatar"
                    android:layout_margin="24dp"
                    android:contentDescription="@string/favorite"
                    android:src="@drawable/ic_baseline_favorite_border_24"/>
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/img_avatar"
                    android:layout_marginTop="12dp"
                    android:textSize="24sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    tools:text="@string/app_name"/>
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_name"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    tools:text="@string/app_name"/>
                <TextView
                    android:id="@+id/tv_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_username"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginHorizontal="8dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    tools:text="@string/app_name"/>
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:contentInsetStartWithNavigation="0dp"
                app:contentInsetStart="0dp"
                android:theme="@style/CustomToolbarTheme"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:layout_gravity="center_horizontal"
            app:tabMode="fixed"
            app:tabGravity="center"
            app:tabIndicatorHeight="4dp"
            app:tabIndicatorColor="@color/colorWhite"
            app:tabTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>